@@ -8,8 +8,10 @@ import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static dev.langchain4j.internal.TypeUtils.isJsonBoolean;
 import static dev.langchain4j.internal.TypeUtils.isJsonInteger;
@@ -55,7 +57,7 @@ public class JsonSchemaElementHelper {
 
         if (clazz.isEnum()) {
             return JsonEnumSchema.builder()
-                    .enumValues(stream(clazz.getEnumConstants()).map(Object::toString).toList())
+                    .enumValues(stream(clazz.getEnumConstants()).map(Object::toString).collect(Collectors.toList()))
                     .description(Optional.ofNullable(fieldDescription).orElse(descriptionFrom(clazz)))
                     .build();
         }
@@ -150,7 +152,7 @@ public class JsonSchemaElementHelper {
     }
 
     private static Class<?> getActualType(Type type) {
-        if (type instanceof ParameterizedType parameterizedType) {
+        if (type instanceof final ParameterizedType parameterizedType) {
             Type[] actualTypeArguments = parameterizedType.getActualTypeArguments();
             if (actualTypeArguments.length == 1) {
                 return (Class<?>) actualTypeArguments[0];
@@ -175,21 +177,35 @@ public class JsonSchemaElementHelper {
     }
 
     public static Map<String, Map<String, Object>> toMap(Map<String, JsonSchemaElement> properties) {
+        return toMap(properties, false);
+    }
+
+    public static Map<String, Map<String, Object>> toMap(Map<String, JsonSchemaElement> properties, boolean strict) {
         Map<String, Map<String, Object>> map = new LinkedHashMap<>();
-        properties.forEach((property, value) -> map.put(property, toMap(value)));
+        properties.forEach((property, value) -> map.put(property, toMap(value, strict)));
         return map;
     }
 
     public static Map<String, Object> toMap(JsonSchemaElement jsonSchemaElement) {
+        return toMap(jsonSchemaElement, false);
+    }
+
+    public static Map<String, Object> toMap(JsonSchemaElement jsonSchemaElement, boolean strict) {
         if (jsonSchemaElement instanceof JsonObjectSchema jsonObjectSchema) {
             Map<String, Object> properties = new LinkedHashMap<>();
             properties.put("type", "object");
             if (jsonObjectSchema.description() != null) {
                 properties.put("description", jsonObjectSchema.description());
             }
-            properties.put("properties", toMap(jsonObjectSchema.properties()));
+            properties.put("properties", toMap(jsonObjectSchema.properties(), strict));
             if (jsonObjectSchema.required() != null) {
                 properties.put("required", jsonObjectSchema.required());
+            }
+            if (strict) {
+                properties.put("additionalProperties", false);
+            }
+            if (jsonObjectSchema.definitions() != null) {
+                properties.put("$defs", toMap(jsonObjectSchema.definitions(), strict));
             }
             return properties;
         } else if (jsonSchemaElement instanceof JsonArraySchema jsonArraySchema) {
@@ -198,7 +214,7 @@ public class JsonSchemaElementHelper {
             if (jsonArraySchema.description() != null) {
                 properties.put("description", jsonArraySchema.description());
             }
-            properties.put("items", toMap(jsonArraySchema.items()));
+            properties.put("items", toMap(jsonArraySchema.items(), strict));
             return properties;
         } else if (jsonSchemaElement instanceof JsonEnumSchema jsonEnumSchema) {
             Map<String, Object> properties = new LinkedHashMap<>();
@@ -235,6 +251,23 @@ public class JsonSchemaElementHelper {
             if (jsonBooleanSchema.description() != null) {
                 properties.put("description", jsonBooleanSchema.description());
             }
+            return properties;
+        } else if (jsonSchemaElement instanceof JsonReferenceSchema) {
+            Map<String, Object> properties = new LinkedHashMap<>();
+            String reference = ((JsonReferenceSchema) jsonSchemaElement).reference();
+            if (reference != null) {
+                properties.put("$ref", "#/$defs/" + reference);
+            }
+            return properties;
+        } else if (jsonSchemaElement instanceof JsonAnyOfSchema jsonAnyOfSchema) {
+            Map<String, Object> properties = new LinkedHashMap<>();
+            if (jsonAnyOfSchema.description() != null) {
+                properties.put("description", jsonAnyOfSchema.description());
+            }
+            List<Map<String, Object>> anyOf = jsonAnyOfSchema.anyOf().stream()
+                    .map(element -> toMap(element, strict))
+                    .collect(Collectors.toList());
+            properties.put("anyOf", anyOf);
             return properties;
         } else {
             throw new IllegalArgumentException("Unknown type: " + jsonSchemaElement.getClass());
